--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="grid grid-cols-3 gap-4">
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand1')">
                         <div class="bg-gradient-to-br from-red-100 to-red-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proNonam.jpg">
+						<img src="../cartin/proNonam.jpg">
                         </div>
                         <p class="text-sm font-medium">Любой главное цена</p>
                     </div>
@@ -540,3 +540,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d79307e3f101fe',t:'MTc1NDkxMzY0NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
