--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="image-option text-center p-6 rounded-xl" onclick="selectOption('calculation', 'material-work')">
                         <div class="bg-gradient-to-br from-green-100 to-green-200 h-48 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\materrab.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/materrab.jpg">
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800">МАТЕРИАЛ И РАБОТА</h3>
                     </div>
@@ -75,55 +75,55 @@
                 <div class="grid grid-cols-3 gap-4">
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand1')">
                         <div class="bg-gradient-to-br from-red-100 to-red-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="../cartin/proNonam.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proNonam.jpg">
                         </div>
                         <p class="text-sm font-medium">Любой главное цена</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand2')">
                         <div class="bg-gradient-to-br from-blue-100 to-blue-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proUPL.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proUPL.jpg">
                         </div>
                         <p class="text-sm font-medium">Ю-Пласт</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand3')">
                         <div class="bg-gradient-to-br from-green-100 to-green-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proALTA.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proALTA.jpg">
                         </div>
                         <p class="text-sm font-medium">Альта Профиль</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand4')">
                         <div class="bg-gradient-to-br from-purple-100 to-purple-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proDoke.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proDoke.jpg">
                         </div>
                         <p class="text-sm font-medium">Docke</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand5')">
                         <div class="bg-gradient-to-br from-orange-100 to-orange-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proFINE.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proFINE.jpg">
                         </div>
                         <p class="text-sm font-medium">FineBer</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand6')">
                         <div class="bg-gradient-to-br from-teal-100 to-teal-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proGrand.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proGrand.jpg">
                         </div>
                         <p class="text-sm font-medium">Grand Line</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand7')">
                         <div class="bg-gradient-to-br from-pink-100 to-pink-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proNORD.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proNORD.jpg">
                         </div>
                         <p class="text-sm font-medium">NordSide</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand8')">
                         <div class="bg-gradient-to-br from-indigo-100 to-indigo-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proTeknikol.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proTeknikol.jpg">
                         </div>
                         <p class="text-sm font-medium">Техноникель</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('manufacturer', 'brand9')">
                         <div class="bg-gradient-to-br from-gray-100 to-gray-200 h-32 rounded-lg mb-3 flex items-center justify-center">
-						<img src="..\cartin\proVOX.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/proVOX.jpg">
                         </div>
                         <p class="text-sm font-medium">Vox</p>
                     </div>
@@ -141,25 +141,25 @@
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('collection', 'collection1')">
                         <div class="bg-gradient-to-br from-amber-100 to-amber-200 h-40 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\el.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/el.jpg">
                         </div>
                         <p class="text-sm font-medium">Ель</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('collection', 'collection2')">
                         <div class="bg-gradient-to-br from-slate-100 to-slate-200 h-40 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\kirpis.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/kirpis.jpg">
                         </div>
                         <p class="text-sm font-medium">Кирпич</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('collection', 'collection3')">
                         <div class="bg-gradient-to-br from-emerald-100 to-emerald-200 h-40 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\slanec.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/slanec.jpg">
                         </div>
                         <p class="text-sm font-medium">Сланец</p>
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('collection', 'collection4')">
                         <div class="bg-gradient-to-br from-rose-100 to-rose-200 h-40 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\hohla.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/hohla.jpg">
                         </div>
                         <p class="text-sm font-medium">Хохла</p>
                     </div>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="image-option text-center p-4 rounded-xl" onclick="selectOption('collection', 'collection6')">
                         <div class="bg-gradient-to-br from-violet-100 to-violet-200 h-40 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\dub.jpg">
+						<img src="https://alex20252032.github.io/zauvka/cartin/dub.jpg">
                         </div>
                         <p class="text-sm font-medium">Дуб</p>
                     </div>
@@ -264,7 +264,7 @@
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
                     <div class="work-option text-center p-4 rounded-xl cursor-pointer border-2 border-gray-200 hover:border-orange-500 hover:bg-orange-50 transition-all" onclick="toggleWork('work1')">
                         <div class="bg-gradient-to-br from-orange-100 to-orange-200 h-32 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\2.png">
+						<img src="https://alex20252032.github.io/zauvka/cartin/2.png">
                         </div>
                         <p class="text-sm font-medium">Сайдинг на цоколб</p>
                         <div class="mt-2">
@@ -273,7 +273,7 @@
                     </div>
                     <div class="work-option text-center p-4 rounded-xl cursor-pointer border-2 border-gray-200 hover:border-orange-500 hover:bg-orange-50 transition-all" onclick="toggleWork('work2')">
                         <div class="bg-gradient-to-br from-blue-100 to-blue-200 h-32 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\3.png">
+						<img src="https://alex20252032.github.io/zauvka/cartin/3.png">
                         </div>
                         <p class="text-sm font-medium">Подшивка кровли софитами</p>
                         <div class="mt-2">
@@ -282,7 +282,7 @@
                     </div>
                     <div class="work-option text-center p-4 rounded-xl cursor-pointer border-2 border-gray-200 hover:border-orange-500 hover:bg-orange-50 transition-all" onclick="toggleWork('work3')">
                         <div class="bg-gradient-to-br from-green-100 to-green-200 h-32 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\4.png">
+						<img src="https://alex20252032.github.io/zauvka/cartin/4.png">
                         </div>
                         <p class="text-sm font-medium">Утепление стен</p>
                         <div class="mt-2">
@@ -291,7 +291,7 @@
                     </div>
                     <div class="work-option text-center p-4 rounded-xl cursor-pointer border-2 border-gray-200 hover:border-orange-500 hover:bg-orange-50 transition-all" onclick="toggleWork('work4')">
                         <div class="bg-gradient-to-br from-purple-100 to-purple-200 h-32 rounded-lg mb-4 flex items-center justify-center">
-						<img src="..\cartin\5.png">
+						<img src="https://alex20252032.github.io/zauvka/cartin/5.png">
                         </div>
                         <p class="text-sm font-medium">Водосточная система</p>
                         <div class="mt-2">
@@ -540,6 +540,7 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d79307e3f101fe',t:'MTc1NDkxMzY0NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
