--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="image-option text-center p-6 rounded-xl" onclick="selectOption('calculation', 'material')">
                         <div class="bg-gradient-to-br from-blue-100 to-blue-200 h-48 rounded-lg mb-4 flex items-center justify-center">
-						<img src="https://alex20252032.github.io/zauvka/../cartin/materr.jpg">
+						<img src="https://alex20252032.github.io/zauvka/../cartin/mater.jpg">
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800">ТОЛЬКО МАТЕРИАЛ</h3>
                     </div>
                     <div class="image-option text-center p-6 rounded-xl" onclick="selectOption('calculation', 'material-work')">
                         <div class="bg-gradient-to-br from-green-100 to-green-200 h-48 rounded-lg mb-4 flex items-center justify-center">
-						<img src="https://alex20252032.github.io/zauvka/cartin/materrab.jpg">
+						<img src="https://alex20252032.github.io/zauvka/../cartin/materrab.jpg">
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800">МАТЕРИАЛ И РАБОТА</h3>
                     </div>
@@ -540,6 +540,7 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d79307e3f101fe',t:'MTc1NDkxMzY0NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
